Add 'ShareazaFile.cpp' and 'ThreadImpl.h' to VS2005 project.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@7066 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/vc8_0/Shareaza.vcproj
+++ b/vc8_0/Shareaza.vcproj
@@ -1006,6 +1006,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\shareaza\ShareazaFile.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\shareaza\ShareazaURL.cpp"
 				>
 			</File>
@@ -2717,6 +2721,10 @@
 			</File>
 			<File
 				RelativePath="..\shareaza\StreamArchive.h"
+				>
+			</File>
+			<File
+				RelativePath="..\shareaza\ThreadImpl.h"
 				>
 			</File>
 			<File
