--- a/shareaza/zlib/zlibwapi_9.vcproj
+++ b/shareaza/zlib/zlibwapi_9.vcproj
@@ -27,6 +27,7 @@
 			IntermediateDirectory="$(PlatformName)\$(ConfigurationName)"
 			ConfigurationType="2"
 			UseOfMFC="0"
+			UseOfATL="0"
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
@@ -54,9 +55,10 @@
 				ExceptionHandling="0"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
+				EnableFunctionLevelLinking="true"
 				RuntimeTypeInfo="false"
 				ProgramDataBaseFileName="$(TargetDir)$(TargetName).pdb"
-				DebugInformationFormat="3"
+				DebugInformationFormat="4"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -104,6 +106,7 @@
 			IntermediateDirectory="$(PlatformName)\$(ConfigurationName)"
 			ConfigurationType="2"
 			UseOfMFC="0"
+			UseOfATL="0"
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
@@ -180,6 +183,7 @@
 			IntermediateDirectory="$(PlatformName)\$(ConfigurationName)"
 			ConfigurationType="2"
 			UseOfMFC="0"
+			UseOfATL="0"
 			WholeProgramOptimization="1"
 			>
 			<Tool
@@ -204,15 +208,15 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="3"
-				InlineFunctionExpansion="2"
+				InlineFunctionExpansion="1"
 				EnableIntrinsicFunctions="true"
 				FavorSizeOrSpeed="1"
 				OmitFramePointers="true"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;ZLIB_WINAPI;ASMV;ASMINF;NOOLDPENTIUMCODE;_CRT_SECURE_NO_DEPRECATE"
+				StringPooling="true"
 				ExceptionHandling="0"
 				RuntimeLibrary="0"
 				RuntimeTypeInfo="false"
-				BrowseInformation="1"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -262,6 +266,7 @@
 			IntermediateDirectory="$(PlatformName)\$(ConfigurationName)"
 			ConfigurationType="2"
 			UseOfMFC="0"
+			UseOfATL="0"
 			WholeProgramOptimization="1"
 			>
 			<Tool
@@ -286,15 +291,15 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="3"
-				InlineFunctionExpansion="2"
+				InlineFunctionExpansion="1"
 				EnableIntrinsicFunctions="true"
 				FavorSizeOrSpeed="1"
 				OmitFramePointers="true"
 				PreprocessorDefinitions="WIN64;NDEBUG;_WINDOWS;_USRDLL;ZLIB_WINAPI;ASMV;ASMINF;NOOLDPENTIUMCODE;_CRT_SECURE_NO_DEPRECATE"
+				StringPooling="true"
 				ExceptionHandling="0"
 				RuntimeLibrary="0"
 				RuntimeTypeInfo="false"
-				BrowseInformation="1"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
