--- a/vc8_0/DocumentReader.vcproj
+++ b/vc8_0/DocumentReader.vcproj
@@ -61,6 +61,7 @@
 				SmallerTypeCheck="true"
 				RuntimeLibrary="1"
 				DefaultCharIsUnsigned="true"
+				RuntimeTypeInfo="false"
 				UsePrecompiledHeader="2"
 				ProgramDataBaseFileName="$(TargetDir)$(TargetName).pdb"
 				WarningLevel="4"
@@ -157,6 +158,7 @@
 				SmallerTypeCheck="true"
 				RuntimeLibrary="1"
 				DefaultCharIsUnsigned="true"
+				RuntimeTypeInfo="false"
 				UsePrecompiledHeader="2"
 				ProgramDataBaseFileName="$(TargetDir)$(TargetName).pdb"
 				WarningLevel="4"
@@ -249,6 +251,7 @@
 				ExceptionHandling="0"
 				RuntimeLibrary="2"
 				DefaultCharIsUnsigned="true"
+				RuntimeTypeInfo="false"
 				UsePrecompiledHeader="2"
 				ProgramDataBaseFileName="$(TargetDir)$(TargetName).pdb"
 				WarningLevel="4"
@@ -344,6 +347,7 @@
 				ExceptionHandling="0"
 				RuntimeLibrary="2"
 				DefaultCharIsUnsigned="true"
+				RuntimeTypeInfo="false"
 				UsePrecompiledHeader="2"
 				ProgramDataBaseFileName="$(TargetDir)$(TargetName).pdb"
 				WarningLevel="4"
