--- a/vc8_0/ImageViewer.vcproj
+++ b/vc8_0/ImageViewer.vcproj
@@ -56,6 +56,7 @@
 				SmallerTypeCheck="true"
 				RuntimeLibrary="1"
 				TreatWChar_tAsBuiltInType="false"
+				RuntimeTypeInfo="false"
 				UsePrecompiledHeader="2"
 				ProgramDataBaseFileName="$(TargetDir)$(TargetName).pdb"
 				WarningLevel="3"
@@ -146,6 +147,7 @@
 				SmallerTypeCheck="true"
 				RuntimeLibrary="1"
 				TreatWChar_tAsBuiltInType="false"
+				RuntimeTypeInfo="false"
 				UsePrecompiledHeader="2"
 				ProgramDataBaseFileName="$(TargetDir)$(TargetName).pdb"
 				WarningLevel="3"
@@ -232,6 +234,7 @@
 				MinimalRebuild="true"
 				RuntimeLibrary="2"
 				TreatWChar_tAsBuiltInType="false"
+				RuntimeTypeInfo="false"
 				UsePrecompiledHeader="2"
 				ProgramDataBaseFileName="$(TargetDir)$(TargetName).pdb"
 				WarningLevel="3"
@@ -321,6 +324,7 @@
 				MinimalRebuild="true"
 				RuntimeLibrary="2"
 				TreatWChar_tAsBuiltInType="false"
+				RuntimeTypeInfo="false"
 				UsePrecompiledHeader="2"
 				ProgramDataBaseFileName="$(TargetDir)$(TargetName).pdb"
 				WarningLevel="3"
