--- a/plugins/NETInterop/FictionBookReader/FictionBookReader.csproj
+++ b/plugins/NETInterop/FictionBookReader/FictionBookReader.csproj
@@ -40,6 +40,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <StartAction>Program</StartAction>
     <StartProgram>..\..\Visual Studio Projects\ShareazaSVN\vc7_1\DebugWin32\Shareaza.exe</StartProgram>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
     <OutputPath>bin\Release\</OutputPath>
@@ -47,6 +48,8 @@
     <DebugType>None</DebugType>
     <CheckForOverflowUnderflow>False</CheckForOverflowUnderflow>
     <DefineConstants>TRACE</DefineConstants>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <Optimize>true</Optimize>
   </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.Targets" />
   <ItemGroup>
@@ -55,6 +58,7 @@
       <HintPath>..\Shareaza.Interop.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Security" />
     <Reference Include="System.Windows.Forms" />
@@ -65,6 +69,7 @@
     <Compile Include="FictionBook.cs" />
     <Compile Include="FictionBookImage.cs" />
     <Compile Include="FictionBookReader.cs" />
+    <Compile Include="GenreMap.cs" />
     <Compile Include="Hresults.cs" />
     <Compile Include="ShareazaBook.cs" />
   </ItemGroup>
